# aimolel

./: .replit  PYPI_PUBLISHING_GUIDE.md  README.md  app.py  app_api_only.py  app_backup.py  app_minimal.py  app_simple.py  demo_chatbot.py  demo_dypy.py  demo_library.py  dieai.db  main.py  models.py  pyproject.toml  pyproject_simple.toml  replit.md  run_app.py  setup.py  simple_server.py  simple_server_final.py
api/: auth.py  endpoints.py
config/: model_config.json  training_config.json
data/: basic_english.json  sample_data.json
dieai_knowledge/: __init__.py
dypy/: README.md  USAGE_GUIDE.md  __init__.py  client.py  examples.py  models.py  setup.py  test_dypy.py
examples/: README.md  advanced_applications.py  ai_robot.py  simple_chatbot.py
models/: dieai_model_best.pt  inference.py  tokenizer.py  training.py  transformer.py  vocab.json
services/: ai_brain.py  database.py  learning.py  search.py  web_search.py
static/css/: style.css
static/js/: chat.js  dashboard.js
templates/: api_generator.html  chat.html  dashboard.html  index.html  login.html  register.html
utils/: helpers.py  rate_limiter.py
