[project]
name = "dieai-app"
version = "0.1.0"
description = "DieAI Custom AI Platform"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.32.4",
    "pyjwt>=2.10.1",
    "werkzeug>=3.0.0",
    "sqlalchemy>=2.0.41",
    "beautifulsoup4>=4.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
